concepts table overflow fixes

--- a/app/assets/stylesheets/components/_invoice-form.scss
+++ b/app/assets/stylesheets/components/_invoice-form.scss
@@ -8,6 +8,9 @@
   .invoice_number {
     flex-wrap: nowrap !important;
   }
+  .concepts-table {
+    overflow-x: auto;
+  }
   @media (max-width: 1195px){
     .items-table-container {
       overflow-x: auto;
